# rust-html-doc-parse

./: Cargo.toml  README.md
src/: lib.rs
src/model/: content.rs  language.rs  mod.rs  page.rs
src/parse/: content.rs  error.rs  flat.rs  meta.rs  mod.rs
tests/: rand_struct_error.rs
tests/resources/: docs.rs_rand_0.8.5_rand_struct.Error.html
